--- a/css/full-width-pics.css
+++ b/css/full-width-pics.css
@@ -5,7 +5,7 @@
  */
 
 body {
-    margin-top: 50px; /* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+/*    margin-top: 50px; /* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */*/
 }
 
 .image-bg-fluid-height,
@@ -18,13 +18,8 @@ body {
 }
 
 .image-bg-fluid-height {
-	background: url('http://lorempixel.com/g/1920/500/') no-repeat center center scroll;
-    padding: 100px 0;
-}
-
-.image-bg-fixed-height {
-	background: url('http://lorempixel.com/g/1920/500/') no-repeat center center scroll;
-    height: 450px;
+	background: url('../backgrounds/bg4-v1.jpg') no-repeat center center scroll;
+  padding: 250px 0;
 }
 
 .img-center {
